force-app/main/default/objects/GrantUsage__c/GrantUsage__c.object-meta.xml
<CustomObject>
    <label>Grant Usage</label>
    <nameField>
        <displayFormat>GU-{00000}</displayFormat>
        <label>Grant Usage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grant Usages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>