force-app/main/default/objects/GrantUsage__c/fields/GrantId__c.field-meta.xml
<CustomField>
    <fullName>GrantId__c</fullName>
    <label>Grant</label>
    <referenceTo>Grant__c</referenceTo>
    <relationshipLabel>Grant Usages</relationshipLabel>
    <relationshipName>GrantUsages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>